--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       <button id="next-page" class="boton">Next Page</button>
     </div>
   </header >
-  <ul id="character-list"></ul>
+  <ul id="character-list">
+
+</ul> 
     <script src="./js/script.js"></script>
 </body>
 </html>
